# xesn

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  codemeta.json  coverage.toml  environment.yaml  paper.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  sphinx.yaml
ci/: environment.yaml
docs/: .gitignore  Makefile  api.rst  basic_usage.ipynb  citation.rst  conf.py  config.yaml  contributing.rst  environment.yaml  example_driver.ipynb  example_esn_usage.ipynb  example_lazy_usage.ipynb  example_macro_training.ipynb  gpus.rst  index.rst  installation.rst  lazy_usage.ipynb  lorenz.py  methods.rst  performance.md  plot_walltime.ipynb  references.bib  references.rst  support.rst
docs/source/: api.rst  conf.py  index.rst  installation.rst  references.rst
docs/source/notebooks/: basic_usage.ipynb  lazy_usage.ipynb  plot_walltime.ipynb
esnpy/: __init__.py  data.py  driver.py  esn.py  io.py  lazyesn.py  matrix.py  options.yaml  timer.py  xdata.py
esnpy/test/: config-eager.yaml  config-lazy.yaml  config-train.yaml  driver.py  esn.py  lazy.py  matrix.py  xdata.py
notebooks/: basic_usage.ipynb  esnpy.mplstyle  lazy_usage.ipynb  plot_walltime.ipynb
scaling/: .gitignore  config-eager.yaml  config-lazy.yaml  create_data.py  lorenz.py  plot_scaling.ipynb  submit_scaling.sh  test_scaling.py
scripts/: test_gpu.py  test_on_gcp.py  timer.py
xesn/: __init__.py  cost.py  driver.py  esn.py  io.py  lazyesn.py  matrix.py  optim.py  psd.py  utils.py  xdata.py
xesn/test/: config-eager.yaml  config-lazy.yaml  cost.py  driver.py  esn.py  lazy.py  matrix.py  optim.py  psd.py  xdata.py
